--- a/aula08.html
+++ b/aula08.html
@@ -14,6 +14,8 @@
         <span id="botoes">
             <button class="modos" id="btlight">Light</button>
             <button class="modos" id="btdark">Dark</button>
+        
+            <button class="modos" id="btFundoImg">Fundo imagem</button>
         </span>
 
         <section id="conteudos">
