--- a/aula19.html
+++ b/aula19.html
@@ -22,9 +22,9 @@
 
             <div class="corpo">
                 <ol type="A" id="alternativas">
-                    <li id="a" value="1A" class="respostas" onclik="verificarSeAcertou(this, this)"></li>
-                    <li id="b" value="1B" class="respostas" onclik="verificarSeAcertou(this, this)"></li>
-                    <li id="c" value="1C" class="respostas" onclik="verificarSeAcertou(this, this)"></li>
+                    <li id="a" value="1A" class="respostas" onclick="verificarSeAcertou(this, this)"></li>
+                    <li id="b" value="1B" class="respostas" onclick="verificarSeAcertou(this, this)"></li>
+                    <li id="c" value="1C" class="respostas" onclick="verificarSeAcertou(this, this)"></li>
                 </ol>
             </div>
             </article>
