finalizado - relogio digital

--- a/aula22.html
+++ b/aula22.html
@@ -33,9 +33,12 @@
                     <div id="temperatura">
                         <h1 class="city"></h1>
                         <h2>
-                             🌡️
-                            <span id="temp"> ºC 💧 </span>
-                            <span id="umidad"> % </span>
+                            🌡️
+                            <span id="temp">  </span>
+                            ºC 💧 
+                        
+                            <span id="umidad">  </span>
+                            %
                         </h2>
                     </div>
                 </div>
